src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

h3 {
  @apply text-[#0a1629] mt-[0px] mb-[8px] text-[22px] font-bold;
  line-height: 1.455em;
}

p {
  @apply mb-[16px] text-[18px] font-normal;
}

/* Navbar section */
nav {
  @apply shadow-md;
}

nav a {
  @apply text-lg font-normal text-gray-500;
}

.logo a {
  @apply text-2xl font-semibold text-gray-500;
}

.sign-up {
  @apply flex justify-center items-center;
}
.sign-up a {
  @apply text-xl font-normal text-gray-400;
}

.orange-btn {
  @apply text-lg font-medium text-white bg-red-400 px-[20px] py-[10px] rounded-full shadow-lg;
}

/* Hero Section */

.container {
  @apply mx-[100px] py-[10px] px-[24px];
}
.section.home-hero {
  @apply pt-[80px] pb-[80px] relative overflow-hidden;
}

.hero-container {
  @apply flex flex-col justify-center items-center;
}

.inner-container {
  @apply mx-[100px];
}

.hero-heading {
  @apply text-6xl font-semibold text-center leading-[1.278em] mb-[10px];
}

.hero-discription {
  @apply text-2xl font-normal text-gray-600  flex justify-center items-center mb-[32px];
}

.hero-btn {
  @apply py-[14px] px-[30px];
}

.home-hero {
  @apply py-[80px] relative overflow-hidden;
  background-image: linear-gradient(
    183deg,
    #fff 90%,
    rgba(158, 159, 168, 0.41)
  );
}

.bg-now {
  @apply h-[50px] max-w-[100vw] absolute top-0 bottom-auto left-0 right-0;
  border-top: 50px solid #fff;
  border-left: 100vw solid #f7f9fa;
}

.bg-now {
  @apply absolute top-auto bottom-0 left-0 right-0;
  border-top-color: rgba(0, 0, 0, 0);
}

/* pain container */
.pain-container {
  @apply grid;
  grid-template-columns: 1fr 1.2fr;
}

.pain-display {
  @apply sticky top-[20px];
}

.pain-item {
  @apply flex  gap-[26px];
}

.pain-item-icon {
  @apply mt-[10px];
}

.pain-item-title {
  @apply min-h-[32px] items-center text-[26px] flex;
}

.pain-item-discription {
  @apply text-gray-400 mb-[16px];
}

.pain-img {
  @apply w-[100px] h-[50px];
}

.home-heading {
  @apply text-[#0a1629] text-[38px] font-bold;
}

strong {
  @apply text-[#0a1629] font-bold;
}

.merriweather {
  @apply text-[#fa5e22] text-[42px] italic font-bold;
  letter-spacing: 0.02em;
  -webkit-text-fill-color: transparent;
  background-image: linear-gradient(#f94e1c 47%, #fd7d2d);
  -webkit-background-clip: text;
  background-clip: text;
  font-family: merriweather, sans-serif;
}

/* Logo section*/

.logo-img {
  @apply mx-auto my-auto;
}

.logo-heading {
  @apply text-4xl mb-[10px] font-semibold text-center;
}

.logo-discription {
  @apply text-2xl text-center;
}

